--- a/htmleaf-demo.css
+++ b/htmleaf-demo.css
@@ -217,6 +217,21 @@ a:hover,a:focus{color:#74777b;text-decoration: none;}
 .icon-htmleaf-arrow-forward-outline:before {
 	content: "\e5001";
 }
+	.button, .button:visited {
+	background: #222 url(overlay.png) repeat-x;
+	display: inline-block;
+	padding: 3px 15px 3px;
+	color: #fff;
+	text-decoration: none;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+	border-bottom: 1px solid rgba(0,0,0,0.25);
+	position: relative;
+	cursor: pointer
+}
 
 @media screen and (max-width: 1024px) {
 	.htmleaf-header {
